bindings/c/include/taffy.h

// Sets the layout used for the children of this node
//
// The default values depends on on which feature flags are enabled. The order of precedence is: Flex, Grid, Block, None.
typedef enum TaffyDisplay {
  // The children will follow the block layout algorithm
  TAFFY_DISPLAY_BLOCK,
  // The children will follow the flexbox layout algorithm
  TAFFY_DISPLAY_FLEX,
  // The children will follow the CSS Grid layout algorithm
  TAFFY_DISPLAY_GRID,
  // The children will not be laid out, and will follow absolute positioning
  TAFFY_DISPLAY_NONE,
} TaffyDisplay;
typedef enum TaffyReturnCode {
  // Operation suceeded
  TAFFY_RETURN_CODE_OK,
  // The style pointer passed was null
  TAFFY_RETURN_CODE_NULL_STYLE_POINTER,
  // The tree pointer passed was null
  TAFFY_RETURN_CODE_NULL_TREE_POINTER,
  // The node referenced by the node id passed does not exist
  TAFFY_RETURN_CODE_INVALID_NODE_ID,
  // An enum value was specified that was outside the range of valid value for this enum
  TAFFY_RETURN_CODE_INVALID_ENUM_VALUE,
  // A Points unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_NONE,
  // A Points unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_POINTS,
  // A Percent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_PERCENT,
  // A MinContent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_MIN_CONTENT,
  // A MaxContent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_MAX_CONTENT,
  // A FitContentPx unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_FIT_CONTENT_PX,
  // A FitContentPercent unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_FIT_CONTENT_PERCENT,
  // An Auto unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_AUTO,
  // An Fr unit was specified but is not valid in this context
  TAFFY_RETURN_CODE_INVALID_FR,
  // A NaN value was specified but is not valid in this context
  TAFFY_RETURN_CODE_UNEXPECTED_NA_N,
  // A infinite value was specified but is not valid in this context
  TAFFY_RETURN_CODE_UNEXPECTED_INFINITY,
  // A negative value was specified but is not valid in this context
  TAFFY_RETURN_CODE_UNEXPECTED_NEGATIVE,
} TaffyReturnCode;
// The positioning strategy for this item.
//
// This controls both how the origin is determined for the [`Style::position`] field,
// and whether or not the item will be controlled by flexbox's layout algorithm.
//
// WARNING: this enum follows the behavior of [CSS's `position` property](https://developer.mozilla.org/en-US/docs/Web/CSS/position),
// which can be unintuitive.
//
// [`Position::Relative`] is the default value, in contrast to the default behavior in CSS.
typedef enum TaffyPosition {
  // The offset is computed relative to the final position given by the layout algorithm.
  // Offsets do not affect the position of any other items; they are effectively a correction factor applied at the end.
  TAFFY_POSITION_RELATIVE,
  // The offset is computed relative to this item's closest positioned ancestor, if any.
  // Otherwise, it is placed relative to the origin.
  // No space is created for the item in the page layout, and its size will not be altered.
  //
  // WARNING: to opt-out of layouting entirely, you must use [`Display::None`] instead on your [`Style`] object.
  TAFFY_POSITION_ABSOLUTE,
} TaffyPosition;
typedef enum TaffyUnit {
  // A none value (used to unset optional fields)
  TAFFY_UNIT_NONE,
  // Fixed Length (pixel) value
  TAFFY_UNIT_LENGTH,
  // Percentage value
  TAFFY_UNIT_PERCENT,
  // Min-content size
  TAFFY_UNIT_MIN_CONTENT,
  // Max-content size
  TAFFY_UNIT_MAX_CONTENT,
  // fit-content() function with a pixel limit
  TAFFY_UNIT_FIT_CONTENT_PX,
  // fit-content() function with a percentage limit
  TAFFY_UNIT_FIT_CONTENT_PERCENT,
  // Automatic values
  TAFFY_UNIT_AUTO,
  // fr unit
  TAFFY_UNIT_FR,
} TaffyUnit;
typedef enum TaffyEdge {
  // The top edge of the box
  TAFFY_EDGE_TOP,
  // The bottom edge of the box
  TAFFY_EDGE_BOTTOM,
  // The left edge of the box
  TAFFY_EDGE_LEFT,
  // The right edge of the box
  TAFFY_EDGE_RIGHT,
  // Both the top and bottom edges of the box
  TAFFY_EDGE_VERTICAL,
  // Both the left and right edges of the box
  TAFFY_EDGE_HORIZONTAL,
  // All four edges of the box
  TAFFY_EDGE_ALL,
} TaffyEdge;
typedef enum TaffyMeasureMode {
  // A none value (used to unset optional fields)
  TAFFY_MEASURE_MODE_EXACT,
  // Fixed Length (pixel) value
  TAFFY_MEASURE_MODE_FIT_CONTENT,
  // Percentage value
  TAFFY_MEASURE_MODE_MIN_CONTENT,
  // Min-content size
  TAFFY_MEASURE_MODE_MAX_CONTENT,
} TaffyMeasureMode;
typedef struct TaffyStyle TaffyStyle;
typedef const struct TaffyStyle *TaffyStyleConstRef;
typedef struct TaffyStyle *TaffyStyleMutRef;
typedef struct TaffyDimension {
  // The value. If the unit is variant that doesn't require a value (e.g. Auto) then the value is ignored.
  float value;
  enum TaffyUnit unit;
} TaffyDimension;
// For all fields, zero represents not set
typedef struct TaffyGridPlacement {
  int16_t start;
  int16_t end;
  uint16_t span;
} TaffyGridPlacement;
typedef struct TaffyNodeId {
  uint64_t _0;
} TaffyNodeId;
typedef struct TaffyNodeIdResult {
  enum TaffyReturnCode return_code;
  struct TaffyNodeId value;
} TaffyNodeIdResult;
typedef struct TaffyStyleMutRefResult {
  enum TaffyReturnCode return_code;
  TaffyStyleMutRef value;
} TaffyStyleMutRefResult;
typedef struct TaffySize {
  float width;
  float height;
} TaffySize;
typedef struct TaffyLayout {
  float x;
  float y;
  float width;
  float height;
} TaffyLayout;
typedef struct TaffyLayoutResult {
  enum TaffyReturnCode return_code;
  struct TaffyLayout value;
} TaffyLayoutResult;
enum TaffyReturnCode TaffyStyle_SetColumnGap(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
struct TaffyDimension TaffyStyle_GetRowGap(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetRowGap(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
float TaffyStyle_GetScrollbarWidth(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetScrollbarWidth(TaffyStyleMutRef raw_style, float value);
struct TaffyDimension TaffyStyle_GetFlexBasis(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetFlexBasis(TaffyStyleMutRef raw_style, float value, enum TaffyUnit unit);
float TaffyStyle_GetFlexGrow(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetFlexGrow(TaffyStyleMutRef raw_style, float value);
float TaffyStyle_GetFlexShrink(TaffyStyleConstRef raw_style);
enum TaffyReturnCode TaffyStyle_SetFlexShrink(TaffyStyleMutRef raw_style, float value);