bindings/csharp/include/NativeMethods.g.cs


        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetColumnGap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetColumnGap(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetRowGap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetRowGap(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetRowGap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetRowGap(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetScrollbarWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float TaffyStyle_GetScrollbarWidth(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetScrollbarWidth", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetScrollbarWidth(TaffyStyle* _raw_style, float _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetFlexBasis", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyDimension TaffyStyle_GetFlexBasis(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetFlexBasis", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetFlexBasis(TaffyStyle* _raw_style, float _value, TaffyUnit _unit);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetFlexGrow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float TaffyStyle_GetFlexGrow(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetFlexGrow", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetFlexGrow(TaffyStyle* _raw_style, float _value);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_GetFlexShrink", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float TaffyStyle_GetFlexShrink(TaffyStyle* _raw_style);

        [DllImport(__DllName, EntryPoint = "TaffyStyle_SetFlexShrink", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern TaffyReturnCode TaffyStyle_SetFlexShrink(TaffyStyle* _raw_style, float _value);


    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyStyle
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffySize
    {
        public float width;
        public float height;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyLayout
    {
        public float x;
        public float y;
        public float width;
        public float height;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyDimension
    {
        /// <summary>
        ///  The value. If the unit is variant that doesn't require a value (e.g. Auto) then the value is ignored.
        /// </summary>
        public float value;
        public TaffyUnit unit;
    }

    /// <summary>
    ///  For all fields, zero represents not set
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyGridPlacement
    {
        public short start;
        public short end;
        public ushort span;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyNativeTree
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyNodeId
    {
        public ulong Item1;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyNodeIdResult
    {
        public TaffyReturnCode return_code;
        public TaffyNodeId value;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyStyleMutRefResult
    {
        public TaffyReturnCode return_code;
        public TaffyStyle* value;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct TaffyLayoutResult
    {
        public TaffyReturnCode return_code;
        public TaffyLayout value;
    }


    public enum TaffyReturnCode : uint
    {
        /// <summary>
        ///  Operation suceeded
        /// </summary>
        Ok,
        /// <summary>
        ///  The style pointer passed was null
        /// </summary>
        NullStylePointer,
        /// <summary>
        ///  The tree pointer passed was null
        /// </summary>
        NullTreePointer,
        /// <summary>
        ///  The node referenced by the node id passed does not exist
        /// </summary>
        InvalidNodeId,
        /// <summary>
        ///  An enum value was specified that was outside the range of valid value for this enum
        /// </summary>
        InvalidEnumValue,
        /// <summary>
        ///  A Points unit was specified but is not valid in this context
        /// </summary>
        InvalidNone,
        /// <summary>
        ///  A Points unit was specified but is not valid in this context
        /// </summary>
        InvalidPoints,
        /// <summary>
        ///  A Percent unit was specified but is not valid in this context
        /// </summary>
        InvalidPercent,
        /// <summary>
        ///  A MinContent unit was specified but is not valid in this context
        /// </summary>
        InvalidMinContent,
        /// <summary>
        ///  A MaxContent unit was specified but is not valid in this context
        /// </summary>
        InvalidMaxContent,
        /// <summary>
        ///  A FitContentPx unit was specified but is not valid in this context
        /// </summary>
        InvalidFitContentPx,
        /// <summary>
        ///  A FitContentPercent unit was specified but is not valid in this context
        /// </summary>
        InvalidFitContentPercent,
        /// <summary>
        ///  An Auto unit was specified but is not valid in this context
        /// </summary>
        InvalidAuto,
        /// <summary>
        ///  An Fr unit was specified but is not valid in this context
        /// </summary>
        InvalidFr,
        /// <summary>
        ///  A NaN value was specified but is not valid in this context
        /// </summary>
        UnexpectedNaN,
        /// <summary>
        ///  A infinite value was specified but is not valid in this context
        /// </summary>
        UnexpectedInfinity,
        /// <summary>
        ///  A negative value was specified but is not valid in this context
        /// </summary>
        UnexpectedNegative,
    }

    public enum TaffyEdge : uint
    {
        /// <summary>
        ///  The top edge of the box
        /// </summary>
        Top,
        /// <summary>
        ///  The bottom edge of the box
        /// </summary>
        Bottom,
        /// <summary>
        ///  The left edge of the box
        /// </summary>
        Left,
        /// <summary>
        ///  The right edge of the box
        /// </summary>
        Right,
        /// <summary>
        ///  Both the top and bottom edges of the box
        /// </summary>
        Vertical,
        /// <summary>
        ///  Both the left and right edges of the box
        /// </summary>
        Horizontal,
        /// <summary>
        ///  All four edges of the box
        /// </summary>
        All,
    }

    public enum TaffyUnit : uint
    {
        /// <summary>
        ///  A none value (used to unset optional fields)
        /// </summary>
        None,
        /// <summary>
        ///  Fixed Length (pixel) value
        /// </summary>
        Length,
        /// <summary>
        ///  Percentage value
        /// </summary>
        Percent,
        /// <summary>
        ///  Min-content size
        /// </summary>
        MinContent,
        /// <summary>
        ///  Max-content size
        /// </summary>
        MaxContent,
        /// <summary>
        ///  fit-content() function with a pixel limit
        /// </summary>
        FitContentPx,
        /// <summary>
        ///  fit-content() function with a percentage limit
        /// </summary>
        FitContentPercent,
        /// <summary>
        ///  Automatic values
        /// </summary>
        Auto,
        /// <summary>
        ///  fr unit
        /// </summary>
        Fr,
    }

    public enum TaffyMeasureMode : uint
    {
        /// <summary>
        ///  A none value (used to unset optional fields)
        /// </summary>
        Exact,
        /// <summary>
        ///  Fixed Length (pixel) value
        /// </summary>
        FitContent,
        /// <summary>
        ///  Percentage value
        /// </summary>
        MinContent,
        /// <summary>
        ///  Min-content size
        /// </summary>
        MaxContent,
    }

    /// <summary>
    ///  Sets the layout used for the children of this node
    ///
    ///  The default values depends on on which feature flags are enabled. The order of precedence is: Flex, Grid, Block, None.
    /// </summary>
    public enum TaffyDisplay : uint
    {
        /// <summary>
        ///  The children will follow the block layout algorithm
        /// </summary>
        Block,
        /// <summary>
        ///  The children will follow the flexbox layout algorithm
        /// </summary>
        Flex,
        /// <summary>
        ///  The children will follow the CSS Grid layout algorithm
        /// </summary>
        Grid,
        /// <summary>
        ///  The children will not be laid out, and will follow absolute positioning
        /// </summary>
        None,
    }

    /// <summary>
    ///  The positioning strategy for this item.
    ///
    ///  This controls both how the origin is determined for the [`Style::position`] field,
    ///  and whether or not the item will be controlled by flexbox's layout algorithm.
    ///
    ///  WARNING: this enum follows the behavior of [CSS's `position` property](https://developer.mozilla.org/en-US/docs/Web/CSS/position),
    ///  which can be unintuitive.
    ///
    ///  [`Position::Relative`] is the default value, in contrast to the default behavior in CSS.
    /// </summary>
    public enum TaffyPosition : uint
    {
        /// <summary>
        ///  The offset is computed relative to the final position given by the layout algorithm.
        ///  Offsets do not affect the position of any other items; they are effectively a correction factor applied at the end.
        /// </summary>
        Relative,
        /// <summary>
        ///  The offset is computed relative to this item's closest positioned ancestor, if any.
        ///  Otherwise, it is placed relative to the origin.
        ///  No space is created for the item in the page layout, and its size will not be altered.
        ///
        ///  WARNING: to opt-out of layouting entirely, you must use [`Display::None`] instead on your [`Style`] object.
        /// </summary>
        Absolute,
    }
